--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="http://localhost:3000/style.css">
+    <link rel="stylesheet" href="http://localhost:3000/static/style.css">
     <title>Galery</title>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 </head>
@@ -13,7 +13,7 @@
 
     <div class="card">
         <div class="header">
-            <img class="header-image" src="./ava.png" alt="avatar">
+            <img class="header-image" src="http://localhost:3000/static/ava.png" alt="avatar">
             <div class="header-title">
                 avatar
             </div>
@@ -28,7 +28,7 @@
 
         <div class="card">
             <div class="header">
-                <img class="header-image" src="./ava.png" alt="avatar">
+                <img class="header-image" src="http://localhost:3000/static/ava.png" alt="avatar">
                 <div class="header-title">
                     avatar
                 </div>
@@ -43,7 +43,7 @@
 
             <div class="card">
                 <div class="header">
-                    <img class="header-image" src="./ava.png" alt="avatar">
+                    <img class="header-image" src="http://localhost:3000/static/ava.png" alt="avatar">
                     <div class="header-title">
                         avatar
                     </div>
@@ -58,6 +58,6 @@
 
         </div>
 
-    <script src="http://localhost:3000/script.js"></script>
+    <script src="http://localhost:3000/static/script.js"></script>
 </body>
 </html>
